--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "npm": "^5.8.0",
     "prop-types": "^15.6.1",
     "react": "^15.5.4",
     "react-debounce-input": "^3.2.0",
@@ -7,11 +8,6 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
