fix and improvements: Changes made after first code review.
- brand new README.md
- fix several behaviors of the Search Page (clear results when query
returns to be blank, safaly deal with search results which contain books
without authors or thumbnail)
- add prop-types checking to all components

Version: 1.2.0

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "reactnd-project-myreads-starter",
+  "version": "1.2.0",
   "dependencies": {
     "npm": "^5.8.0",
     "prop-types": "^15.6.1",
